<resources>
    <string name="app_name">萧帮主</string>
    <string name="my_message">我的消息</string>
    <string name="my_collection">我的关注</string>
    <string name="my_subscription">我的粉丝</string>
    <string name="login">点击登录</string>
    <string name="home_title">萧帮主</string>
    <string name="news_ground">新闻广场</string>
    <string name="campus_activity">校园活动</string>


    <string name="forget_password">忘记密码</string>
    <string name="registe">点击注册</string>
    <string name="have_account">已有账号</string>

    <string name="normal_task">普通</string>
    <string name="second_trading">二手</string>
    <string name="tangle">纠结癌</string>
    <string name="team">求组队</string>
    <string name="express_delivery">取快递</string>

    <string name="member_select_name_hint">账号:</string>
    <string name="member_select_month_hint">月:</string>
    <string name="member_select_month_other">其他</string>
    <string name="member_select_year_hint">开通年费会员可享更多特权</string>
    <string name="member_select_year">开通年费会员</string>
    <string name="member_select_pay_method_hint">支付方式:</string>
    <string name="member_select_money_hint">金额:</string>

    <string name="aliPay">支付宝支付</string>
    <string name="wechat">  微信支付</string>
    <string name="pay">立即开通</string>
</resources>
