<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:layout_marginTop="10dp"
    android:orientation="horizontal">

    <LinearLayout
        android:clickable="false"
        android:id="@+id/person_message_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:padding="6dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="false"
            android:src="@drawable/person_message"
            android:id="@+id/imageView" />

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/my_message"
            android:textColor="@color/color_user_banner_text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/person_attention_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/person_attention_num"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="false"
            android:textSize="15sp"
            android:gravity="center"
            android:text="0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/my_collection"
            android:textSize="15sp"
            android:textColor="@color/color_user_banner_text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/person_fans_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/person_fans_num"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="false"
            android:textSize="15sp"
            android:gravity="center"
            android:text="0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/my_subscription"
            android:textSize="15sp"
            android:textColor="@color/color_user_banner_text" />
    </LinearLayout>

</LinearLayout>